# AVM

./: CMakeLists.txt  cameraFusion.config  readme.md
SCL/: SCL.hpp
cusrc/: kernelblend.cu  util.cu  util.cuh  yuv2rgb.cu  yuv2rgb.cuh
data/: cameras.xml  cameras.xml22  cameras.xmlbak  overlay.yaml  video0.yaml  video0H.yaml  video1.yaml  video1H.yaml  video2.yaml  video2H.yaml  video3.yaml  video3H.yaml
images/: 1.png.psd  未标题-1.psd
include/: AlgConfig.h  Bowl.hpp  Datadefine.h  ImageWidget.h  KConfig.h  KMsg.h  Mesh.hpp  Model.hpp  MyUtil.h  SVCudaOGL.hpp  SVRender.hpp  Shader.hpp  Ttimer.h  Virtcam.hpp  aboutdlg.h  aspectsinglelayout.h  bak  calibratewidget.h  cameraCalibrator.h  cameralistwidget.h  cameraparameter.h  extrinsicdialog.h  extrinsiclabel.h  mainwindow.h  meshgrid.hpp  qgpurender.h  rtspplayer.h  timer.h  visualObj.hpp  xShader.h
models/: Dodge Challenger SRT Hellcat 2015.mtl  testobject.mtl
resource/: icons.qrc  images.qrc  mainwindow.qrc  shaders.qrc
shader/: bgfrag.glsl  blackrectshaderfrag.glsl  blackrectshadervert.glsl  frame_screenfrag.glsl  frame_screenvert.glsl  fshader.fsh  modelshaderfrag.glsl  modelshadervert.glsl  surroundfrag.glsl  surroundvert.glsl  vshader.vsh
shaders/: bg.vs  draw_texture (copy).frag  draw_texture (copy).vs  testvis.frag
src/: AlgConfig .cpp  Bowl.cpp  ImageWidget.cpp  KConfig.cpp  KMsg.cpp  Mesh.cpp  Model.cpp  MyUtil.cpp  SVCudaOGL.cpp  SVRender.cpp  aboutdlg.cpp  calibratewidget.cpp  cameraCalibrator.cpp  cameralistwidget.cpp  cameraparameter.cpp  extrinsicdialog.cpp  extrinsiclabel.cpp  main.cpp  mainwindow.cpp  qgpurender.cpp  rtspplayer.cpp  visualObj.cpp
style/: dark.qss
ui/: about.ui  calibratewidget.ui  cameralistwidget.ui  extrinsicdialog.ui  mainwindow.ui
